[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech-quartermaster"
version = "0.1.0"
description = "Iron Lance Mechbay Operations — a BattleTech-inspired terminal management game"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
mech-quartermaster = "mech_quartermaster.app:main"

[tool.setuptools.packages.find]
where = ["src"]
